@@ -31,6 +31,8 @@ BUG FIXES:
 +Don't do a replace when there is no selection.
 +Fix number of minor bugs related to finding accented characters.
 +Fix bug in batch file comment command, ensure a space is between 'rem' and the comment text.
++Fix bug on Windows that could cause an unhandled exception error when closing the
+preferences dialog after closing the last main window.
 
 #-----------------------------------------------------------------------------#
 Changes since last release:
